Change intro text for diagnostics

--- a/diagnostics.html
+++ b/diagnostics.html
@@ -56,9 +56,10 @@
                     <p class="diag-hero-badge">Диагностики + энергочистка</p>
                     <h1 class="diag-hero-title">Диагностики Сурии</h1>
                     <p class="diag-hero-subtitle">
-                        Глубокие расклады, которые показывают, что происходит с вами, вашим путём, отношениями и
-                        самореализацией —
-                        и помогают снять внутренние блоки, чтобы стало легче дышать.
+                        Это глубокая работа с вашим внутренним миром. Я помогаю увидеть, что происходит в вашем
+                        подсознании , какие установки и убеждения влияют на вашу жизнь прямо сейчас, что мешает
+                        двигаться вперёд, а что, наоборот, поддерживает. Это не просто предсказание, а понимание себя
+                        изнутри.
                     </p>
                     <a href="#diagnostics" class="btn-primary">Выбрать диагностику</a>
                 </div>
@@ -86,6 +87,7 @@
 
                     <!-- Диагностика: Я и мой путь -->
                     <article class="diag-card">
+
                         <figure class="diag-card-figure">
                             <img src="assets/images/diag-path.jpg"
                                 alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
@@ -113,6 +115,10 @@
                         </a>
                     </article>
                     <article class="diag-card">
+                        <figure class="diag-card-figure">
+                            <img src="assets/images/diag-path.jpg"
+                                alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
+                        </figure>
                         <h3 class="diag-card-title">Диагностика негатива (углублённая)</h3>
                         <p class="diag-card-tag">Глубокая диагностика + энергочистка</p>
                         <p class="diag-card-text">
@@ -143,6 +149,10 @@
                         </a>
                     </article>
                     <article class="diag-card">
+                        <figure class="diag-card-figure">
+                            <img src="assets/images/diag-path.jpg"
+                                alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
+                        </figure>
                         <h3 class="diag-card-title">Диагностика «Я и мой путь»</h3>
                         <p class="diag-card-tag">Диагностика + энергочистка</p>
                         <p class="diag-card-text">
@@ -166,6 +176,10 @@
 
                     <!-- Диагностика: Что со мной происходит? -->
                     <article class="diag-card">
+                        <figure class="diag-card-figure">
+                            <img src="assets/images/diag-path.jpg"
+                                alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
+                        </figure>
                         <h3 class="diag-card-title">Диагностика «Что со мной происходит?»</h3>
                         <p class="diag-card-tag">Диагностика + энергочистка</p>
                         <p class="diag-card-text">
@@ -189,6 +203,10 @@
 
                     <!-- Диагностика отношений: кто он для тебя? -->
                     <article class="diag-card">
+                        <figure class="diag-card-figure">
+                            <img src="assets/images/diag-path.jpg"
+                                alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
+                        </figure>
                         <h3 class="diag-card-title">Диагностика отношений: «Кто он для тебя?»</h3>
                         <p class="diag-card-tag">Диагностика + энергочистка</p>
                         <p class="diag-card-text">
@@ -210,6 +228,10 @@
 
                     <!-- Диагностика: почему я одна? -->
                     <article class="diag-card">
+                        <figure class="diag-card-figure">
+                            <img src="assets/images/diag-path.jpg"
+                                alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
+                        </figure>
                         <h3 class="diag-card-title">Диагностика «Почему я одна?»</h3>
                         <p class="diag-card-tag">Диагностика + энергочистка</p>
                         <p class="diag-card-text">
@@ -233,6 +255,10 @@
 
                     <!-- Диагностика после медитации -->
                     <article class="diag-card">
+                        <figure class="diag-card-figure">
+                            <img src="assets/images/diag-path.jpg"
+                                alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
+                        </figure>
                         <h3 class="diag-card-title">Диагностика после медитации</h3>
                         <p class="diag-card-tag">Диагностика + энергочистка</p>
                         <p class="diag-card-text">
@@ -253,13 +279,18 @@
                     </article>
 
                     <!-- Диагностика на самореализацию -->
-                    <article class="diag-card diag-card--wide">
+                    <article class="diag-card">
+                        <figure class="diag-card-figure">
+                            <img src="assets/images/diag-path.jpg"
+                                alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
+                        </figure>
                         <h3 class="diag-card-title">Диагностика «Моя самореализация»</h3>
                         <p class="diag-card-tag">Диагностика + энергочистка</p>
                         <p class="diag-card-text">
                             Для тех, у кого самореализация то загорается, то гаснет. Вы начинаете с энтузиазмом — и
                             вдруг интерес
-                            пропадает или появляются «объективные причины» остановиться. Этот расклад показывает, что на
+                            пропадает или появляются «объективные причины» остановиться. Этот расклад показывает,
+                            что на
                             самом деле
                             мешает двигаться вперёд и проявлять себя в мире.
                         </p>
