Add vk contact to meditation and diagnostics

--- a/diagnostics.html
+++ b/diagnostics.html
@@ -318,15 +318,32 @@
         <!-- Контакты -->
         <section id="contact" class="diag-contact">
             <div class="container diag-contact-grid">
-                <div>
-                    <h2 class="section-title">Как записаться на диагностику</h2>
+                <div class="contact-text" id="sofia-contact">
+                    <h2 class="section-title">Готовы сделать первый шаг?</h2>
                     <p>
-                        Напишите моему ассистенту Софии в Telegram, укажите, какой формат диагностики откликается, и
-                        удобное время.
-                        Мы подскажем все детали и подготовим пространство для вашей работы.
+                        Если вы чувствуете, что пришло время менять свою жизнь, вы не обязаны проходить это в
+                        одиночестве.
+                        Я и моя команда рядом, чтобы поддержать вас на этом пути.
+                    </p>
+                    <p>
+                        Для записи на расклады и по другим вопросам свяжитесь с моим ассистентом Софией в Telegram.
                     </p>
                     <a class="contact-highlight" href="https://t.me/sofiya1203" target="_blank" rel="noopener">
-                        Telegram для записи: <strong>@sofiya1203</strong>
+                        Telegram для записи:
+                        <div class="social-sofia">
+                            <strong>@sofiya1203</strong>
+                        </div>
+                    </a>
+
+                    <p style="margin-top: 16px; opacity: 0.9; font-size: 0.95rem;">
+                        Или напишите Мари в ВКонтакте:
+                    </p>
+                    <a class="contact-highlight" href="http://vk.me/stukserdzavk" target="_blank" rel="noopener"
+                        style="margin-top: 8px;">
+                        ВКонтакте для связи:
+                        <div class="social-sofia">
+                            <strong>Мари (Стук сердца)</strong>
+                        </div>
                     </a>
                 </div>
 
