--- a/meditations.html
+++ b/meditations.html
@@ -426,17 +426,34 @@
         <!-- Контакты -->
         <section id="contact" class="med-contact">
             <div class="container med-contact-grid">
-                <div>
-                    <h2 class="section-title">Если нужна поддержка рядом</h2>
+                <div class="contact-text" id="sofia-contact">
+                    <h2 class="section-title">Готовы сделать первый шаг?</h2>
                     <p>
-                        Если чувствуете, что медитаций мало и хочется живого сопровождения — можно записаться на расклад
-                        или энергосессию через моего ассистента.
+                        Если вы чувствуете, что пришло время менять свою жизнь, вы не обязаны проходить это в
+                        одиночестве.
+                        Я и моя команда рядом, чтобы поддержать вас на этом пути.
+                    </p>
+                    <p>
+                        Для записи на расклады и по другим вопросам свяжитесь с моим ассистентом Софией в Telegram.
                     </p>
                     <a class="contact-highlight" href="https://t.me/sofiya1203" target="_blank" rel="noopener">
-                        Telegram для записи: <strong>@sofiya1203</strong>
+                        Telegram для записи:
+                        <div class="social-sofia">
+                            <strong>@sofiya1203</strong>
+                        </div>
+                    </a>
+
+                    <p style="margin-top: 16px; opacity: 0.9; font-size: 0.95rem;">
+                        Или напишите Мари в ВКонтакте:
+                    </p>
+                    <a class="contact-highlight" href="http://vk.me/stukserdzavk" target="_blank" rel="noopener"
+                        style="margin-top: 8px;">
+                        ВКонтакте для связи:
+                        <div class="social-sofia">
+                            <strong>Мари (Стук сердца)</strong>
+                        </div>
                     </a>
                 </div>
-
                 <form action="https://formspree.io/f/mgowdgyd" method="POST" class="med-form">
                     <div>
                         <label for="name">Имя</label>
