--- a/meditations.html
+++ b/meditations.html
@@ -125,7 +125,7 @@
                         <article class="med-card med-card--package">
                             <div class="med-card-tag">Набор медитаций</div>
                             <figure class="med-card-figure">
-                                <img src="assets/images/med-opora.jpg"
+                                <img src="assets/images/meditations-images/meditation-pack-stamina.png"
                                     alt="Светлая медитация для восстановления опоры внутри себя" class="med-card-image">
                             </figure>
                             <h3 class="med-card-title">Опора внутри меня</h3>
@@ -149,7 +149,7 @@
                         <article class="med-card med-card--package">
                             <div class="med-card-tag">Набор медитаций</div>
                             <figure class="med-card-figure">
-                                <img src="assets/images/med-protection.jpg"
+                                <img src="assets/images/meditations-images/meditation-pack-energy.png"
                                     alt="Медитации защиты, очищения и восстановления энергии" class="med-card-image">
                             </figure>
                             <h3 class="med-card-title">Защита и баланс энергии</h3>
@@ -171,7 +171,7 @@
                         <article class="med-card med-card--package">
                             <div class="med-card-tag">Набор медитаций</div>
                             <figure class="med-card-figure">
-                                <img src="assets/images/med-love.jpg"
+                                <img src="assets/images/meditations-images/meditation-pack-hearts.png"
                                     alt="Медитации для исцеления прошлого и притяжения новой любви"
                                     class="med-card-image">
                             </figure>
