Add correct paths to new images

--- a/diagnostics.html
+++ b/diagnostics.html
@@ -89,7 +89,7 @@
                     <article class="diag-card">
 
                         <figure class="diag-card-figure">
-                            <img src="assets/images/diag-path.jpg"
+                            <img src="assets/images/diagnostics-images/red-gold-star-dust.jpg"
                                 alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
                         </figure>
                         <h3 class="diag-card-title">Диагностика магического негатива</h3>
@@ -116,7 +116,7 @@
                     </article>
                     <article class="diag-card">
                         <figure class="diag-card-figure">
-                            <img src="assets/images/diag-path.jpg"
+                            <img src="assets/images/diagnostics-images/energy-clash-diag.jpg"
                                 alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
                         </figure>
                         <h3 class="diag-card-title">Диагностика негатива (углублённая)</h3>
@@ -150,7 +150,7 @@
                     </article>
                     <article class="diag-card">
                         <figure class="diag-card-figure">
-                            <img src="assets/images/diag-path.jpg"
+                            <img src="assets/images/diagnostics-images/golden-path-diag.png"
                                 alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
                         </figure>
                         <h3 class="diag-card-title">Диагностика «Я и мой путь»</h3>
@@ -177,7 +177,7 @@
                     <!-- Диагностика: Что со мной происходит? -->
                     <article class="diag-card">
                         <figure class="diag-card-figure">
-                            <img src="assets/images/diag-path.jpg"
+                            <img src="assets/images/diagnostics-images/deep-forest-diag.jpg"
                                 alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
                         </figure>
                         <h3 class="diag-card-title">Диагностика «Что со мной происходит?»</h3>
@@ -204,7 +204,7 @@
                     <!-- Диагностика отношений: кто он для тебя? -->
                     <article class="diag-card">
                         <figure class="diag-card-figure">
-                            <img src="assets/images/diag-path.jpg"
+                            <img src="assets/images/diagnostics-images/couple-in-sun.png"
                                 alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
                         </figure>
                         <h3 class="diag-card-title">Диагностика отношений: «Кто он для тебя?»</h3>
@@ -229,7 +229,7 @@
                     <!-- Диагностика: почему я одна? -->
                     <article class="diag-card">
                         <figure class="diag-card-figure">
-                            <img src="assets/images/diag-path.jpg"
+                            <img src="assets/images/diagnostics-images/woman-in-golden-ribbons.png"
                                 alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
                         </figure>
                         <h3 class="diag-card-title">Диагностика «Почему я одна?»</h3>
@@ -256,7 +256,7 @@
                     <!-- Диагностика после медитации -->
                     <article class="diag-card">
                         <figure class="diag-card-figure">
-                            <img src="assets/images/diag-path.jpg"
+                            <img src="assets/images/diagnostics-images/golden-waves.jpg"
                                 alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
                         </figure>
                         <h3 class="diag-card-title">Диагностика после медитации</h3>
@@ -281,7 +281,7 @@
                     <!-- Диагностика на самореализацию -->
                     <article class="diag-card">
                         <figure class="diag-card-figure">
-                            <img src="assets/images/diag-path.jpg"
+                            <img src="assets/images/diagnostics-images/different-paths.png"
                                 alt="Таро-расклад на жизненный путь и направление души" class="diag-card-image">
                         </figure>
                         <h3 class="diag-card-title">Диагностика «Моя самореализация»</h3>
