Fix link to diag page

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                     Глубокие расклады для прояснения ситуации, выявления причин боли и запутанных
                                     сценариев.
                                 </p>
-                                <a href="#contact" class="product-link">Выбрать диагностику</a>
+                                <a href="diagnostics.html" class="product-link">Выбрать диагностику</a>
                             </article>
 
                             <!-- Чистки -->
