Fix link to contact

--- a/diagnostics.html
+++ b/diagnostics.html
@@ -110,7 +110,7 @@
                             <li>Есть ли удар по личному росту и развитию.</li>
                         </ul>
                         <p class="diag-price">2 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="diag-link">
+                        <a href="#contact" class="diag-link">
                             Записаться на диагностику
                         </a>
                     </article>
@@ -144,7 +144,7 @@
                             <li>Совет и направление для дальнейшей работы.</li>
                         </ul>
                         <p class="diag-price">4 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="diag-link">
+                        <a href="#contact" class="diag-link">
                             Записаться на диагностику
                         </a>
                     </article>
@@ -169,7 +169,7 @@
                             <li>Куда ведёт меня моя душа сейчас?</li>
                         </ul>
                         <p class="diag-price">2 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="diag-link">
+                        <a href="#contact" class="diag-link">
                             Записаться на диагностику
                         </a>
                     </article>
@@ -196,7 +196,7 @@
                             <li>Что поможет вернуть баланс и силы.</li>
                         </ul>
                         <p class="diag-price">2 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="diag-link">
+                        <a href="#contact" class="diag-link">
                             Записаться на диагностику
                         </a>
                     </article>
@@ -221,7 +221,7 @@
                             <li>К чему это может прийти, если всё оставить как есть.</li>
                         </ul>
                         <p class="diag-price">2 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="diag-link">
+                        <a href="#contact" class="diag-link">
                             Записаться на диагностику
                         </a>
                     </article>
@@ -248,7 +248,7 @@
                             <li>Один дополнительный вопрос на ваш выбор.</li>
                         </ul>
                         <p class="diag-price">2 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="diag-link">
+                        <a href="#contact" class="diag-link">
                             Записаться на диагностику
                         </a>
                     </article>
@@ -273,7 +273,7 @@
                             <li>Что важно сделать, чтобы закрепить результат.</li>
                         </ul>
                         <p class="diag-price">2 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="diag-link">
+                        <a href="#contact" class="diag-link">
                             Записаться на диагностику
                         </a>
                     </article>
@@ -306,7 +306,7 @@
                             <li>В каком формате деятельности вы сможете раскрыться лучше всего.</li>
                         </ul>
                         <p class="diag-price">2 000 ₽</p>
-                        <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="diag-link">
+                        <a href="#contact" class="diag-link">
                             Записаться на диагностику
                         </a>
                     </article>
