--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                     <p style="margin-top: 16px; opacity: 0.9; font-size: 0.95rem;">
                         Или напишите Мари в ВКонтакте:
                     </p>
-                    <a class="contact-highlight" href="http://vk.me/stukserdzavk" target="_blank" rel="noopener"
+                    <a class="contact-highlight" href="https://vk.me/stukserdzavk" target="_blank" rel="noopener"
                         style="margin-top: 8px;">
                         ВКонтакте для связи:
                         <div class="social-sofia">
