Change content for hero section

--- a/index.html
+++ b/index.html
@@ -67,21 +67,22 @@
         <section class="hero" id="top">
             <div class="container hero-grid">
                 <div>
-                    <div class="hero-badge">Путь трансформации души</div>
-                    <h1 class="hero-title">Сурия — энергетический практик и таро-терапевт</h1>
+                    <div class="hero-badge">Вы нашли то, что искали</div>
+                    <h1 class="hero-title">Сурия — энергопрактик и проводник к подсознанию</h1>
                     <p class="hero-subtitle">
-                        Помогаю пройти через боль, отпустить прошлое, освободиться от тяжёлых узлов и создать для себя
-                        новую жизнь.
+                        Я не обещаю чудеса, я помогаю им случиться. Мои практики и мой голос вернут вам уверенность,
+                        спокойствие, деньги и любовь. Шагните в жизнь, которой вы достойны.
                     </p>
                     <div class="hero-actions">
-                        <a class="btn-primary" href="#sofia-contact">Записаться на расклад</a>
+                        <a class="btn-primary" href="#contact"
+                            aria-label="Go to contact section to find the bestway for you to start working with Suria">
+                            Сделать первый шаг
+                        </a>
                         <!-- <button class="btn-ghost">Узнать мой путь</button> -->
                     </div>
                 </div>
                 <div class="hero-photo-wrap">
                     <div class="hero-photo-container">
-                        <!-- <img src="assets/images/suria-with-heart.webp"
-                            alt="Suria smiling and holding hands in a shape of heart" class="hero-photo"> -->
                         <img src="assets/images/suria-luxury-photo.jpg"
                             alt="Suria smiling and holding hands in a shape of heart" class="hero-photo">
 
