Change about content

--- a/index.html
+++ b/index.html
@@ -101,20 +101,20 @@
         <section class="alt" id="about">
             <div class="container about-grid">
                 <div class="about-text">
-                    <h2 class="section-title">Когда жизнь ломает — и собирает заново</h2>
+                    <h2 class="section-title">Я была на вашем месте</h2>
                     <p>
                         Меня зовут Сурия. Я прошла через предательства, сложные кармические узлы и тяжёлые уроки,
-                        которые казались непосильными.
-                        Знаю, как больно бывает, когда рушится опора, и даже самые близкие люди причиняют раны.
+                        которые казались непосильными. Знаю, как бывает больно, когда рушится опора, и даже самые
+                        близкие люди причиняют боль.
                     </p>
                     <p>
                         Мой опыт научил меня подниматься с самого дна, шаг за шагом возвращать веру в себя и находить
-                        свет даже в самых тёмных периодах жизни.
-                        Сейчас я рядом с теми, кто готов пройти этот путь трансформации души и реальности.
+                        свет даже в самых тёмных периодах жизни. Сейчас я рядом с теми, кто готов пройти путь к новой
+                        жизни.
                     </p>
                     <div class="quote-box">
                         Моя миссия — помочь вам увидеть свет в темноте, отпустить прошлое и освободиться от узлов,
-                        которые мешают дышать свободно.
+                        которые мешают свободно вздохнуть.
                     </div>
                 </div>
                 <div class="about-photo-container">
