Change service section description and styles

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
             <div class="container">
                 <div class="services-header">
                     <h2 class="section-title">Что ждёт вас в моём пространстве</h2>
-                    <p style="max-width: 520px; margin: 0 auto; font-size: 0.95rem; opacity: 0.9;">
-                        Здесь мы мягко разбираем боль, находим корневые причины повторяющихся сценариев и возвращаем вам
-                        ощущение внутренней опоры.
+                    <p class="services-header-subtitle">
+                        Здесь мы с вами докопаемся до сути ваших проблем, разберём причины повторяющихся историй и
+                        вернем вам уверенность в себе.
                     </p>
                 </div>
 
