Change product content

--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
         <section id="products" class="alt">
             <div class="container">
                 <div class="products-intro">
-                    <h2 class="section-title">Продукты от Сурии</h2>
+                    <h2 class="section-title">С чего вы можете начать</h2>
                     <p>
-                        Здесь вы можете выбрать формат работы, который лучше всего откликается вашему пути:
-                        диагностика, чистки, авторские таро-наборы и медитации.
+                        ЗЗдесь вы можете выбрать формат, который лучше всего вам откликается: диагностика, энергочистка,
+                        авторские таро-расклады, медитации и аудиопрограммы
                     </p>
                 </div>
                 <div class="container products-grid">
@@ -201,8 +201,8 @@
                             <article class="product-card">
                                 <h3 class="product-title">Диагностика</h3>
                                 <p class="product-text">
-                                    Глубокие расклады для прояснения ситуации, выявления причин боли и запутанных
-                                    сценариев.
+                                    Глубокие расклады для понимания, что именно мешает жить, на уровне психики,
+                                    подсознания и энергии
                                 </p>
                                 <a href="diagnostics.html" class="product-link">Выбрать диагностику</a>
                             </article>
@@ -211,8 +211,9 @@
                             <article class="product-card">
                                 <h3 class="product-title">Чистки</h3>
                                 <p class="product-text">
-                                    Энергетические чистки и работа с кармическими узлами, чтобы освободиться от тяжёлых
-                                    привязок.
+                                    Энергетическая чистка, снимающая блоки, зажимы и родовые программы, разрушающие
+                                    жизнь
+
                                 </p>
                                 <a href="#contact" class="product-link">Запросить чистку</a>
                             </article>
@@ -221,8 +222,8 @@
                             <article class="product-card">
                                 <h3 class="product-title">Авторские таро-наборы</h3>
                                 <p class="product-text">
-                                    Уникальные таро-комплекты, созданные Сурией, для самостоятельной работы и глубинной
-                                    трансформации.
+                                    Авторские таро-расклады, составляемые персонально под любую вашу ситуацию и вопрос.
+
                                 </p>
                                 <a href="#contact" class="product-link">Узнать о наборах</a>
                             </article>
@@ -231,9 +232,7 @@
                             <article class="product-card">
                                 <h3 class="product-title">Медитации</h3>
                                 <p class="product-text">
-                                    Проводниковые медитации и аудио-программы для мягкого проживания боли и возвращения
-                                    к
-                                    себе.
+                                    Медитации и аудиопрограммы для глубокой и эффективной работы с подсознанием.
                                 </p>
                                 <a href="meditations.html" class="product-link">learn about медитации</a>
                             </article>
