Change social content

--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
             <div class="container">
                 <h2 class="section-title" style="text-align:center;">Присоединяйтесь в моих пространствах</h2>
                 <p style="max-width: 520px; margin: 0 auto 24px; text-align:center; font-size:0.95rem; opacity:0.9;">
-                    Я делюсь раскладами, мыслями о внутренней силе и поддержкой для тех, кто проживает сложные периоды и
-                    выбирает новую жизнь.
+                    Я делюсь лайфхаками, практиками, мини-медитациями и поддержкой для тех, кто проходит сложные периоды
+                    и ищет выход
                 </p>
                 <div class="social-grid">
                     <a class="social-card" href="https://instagram.com/_the_sun_tarot" target="_blank" rel="noopener">
