Change contact content

--- a/index.html
+++ b/index.html
@@ -391,28 +391,28 @@
                 <div class="contact-text" id="sofia-contact">
                     <h2 class="section-title">Готовы сделать первый шаг?</h2>
                     <p>
-                        Если вы чувствуете, что пришло время менять свою жизнь, вы не обязаны проходить это в
-                        одиночестве.
-                        Я и моя команда рядом, чтобы поддержать вас на этом пути.
+                        Если вы чувствуете, что пришло время менять свою жизнь, важно не оставаться с этим в
+                        одиночестве. Я и моя команда рядом, чтобы поддержать вас на этом пути.
                     </p>
                     <p>
-                        Для записи на расклады и по другим вопросам свяжитесь с моим ассистентом Софией в Telegram.
+                        Для консультации или понимания, с чего лучше начать, напишите моей ассистентке Софии в Telegram
+                        или моей ассистентке Марии в VK.
                     </p>
                     <a class="contact-highlight" href="https://t.me/sofiya1203" target="_blank" rel="noopener">
-                        Telegram для записи:
+                        Telegram для связи:
                         <div class="social-sofia">
-                            <strong>@sofiya1203</strong>
+                            <strong>София </strong>
                         </div>
                     </a>
 
-                    <p style="margin-top: 16px; opacity: 0.9; font-size: 0.95rem;">
-                        Или напишите Мари в ВКонтакте:
-                    </p>
+                    <!-- <p style="margin-top: 16px; opacity: 0.9; font-size: 0.95rem;">
+                        ВКонтакте для записи:
+                    </p> -->
                     <a class="contact-highlight" href="https://vk.me/stukserdzavk" target="_blank" rel="noopener"
                         style="margin-top: 8px;">
                         ВКонтакте для связи:
                         <div class="social-sofia">
-                            <strong>Мари (Стук сердца)</strong>
+                            <strong>Мария </strong>
                         </div>
                     </a>
                 </div>
