Change contact content across pages

--- a/meditations.html
+++ b/meditations.html
@@ -425,52 +425,53 @@
         </section>
 
         <!-- Контакты -->
-        <section id="contact" class="med-contact">
-            <div class="container med-contact-grid">
+        <section id="contact">
+            <div class="container contact-grid">
                 <div class="contact-text" id="sofia-contact">
                     <h2 class="section-title">Готовы сделать первый шаг?</h2>
                     <p>
-                        Если вы чувствуете, что пришло время менять свою жизнь, вы не обязаны проходить это в
-                        одиночестве.
-                        Я и моя команда рядом, чтобы поддержать вас на этом пути.
+                        Если вы чувствуете, что пришло время менять свою жизнь, важно не оставаться с этим в
+                        одиночестве. Я и моя команда рядом, чтобы поддержать вас на этом пути.
                     </p>
                     <p>
-                        Для записи на расклады и по другим вопросам свяжитесь с моим ассистентом Софией в Telegram.
+                        Для консультации или понимания, с чего лучше начать, напишите моей ассистентке Софии в Telegram
+                        или моей ассистентке Марии в VK.
                     </p>
                     <a class="contact-highlight" href="https://t.me/sofiya1203" target="_blank" rel="noopener">
-                        Telegram для записи:
+                        Telegram для связи:
                         <div class="social-sofia">
-                            <strong>@sofiya1203</strong>
+                            <strong>София </strong>
                         </div>
                     </a>
-
-                    <p style="margin-top: 16px; opacity: 0.9; font-size: 0.95rem;">
-                        Или напишите Мари в ВКонтакте:
-                    </p>
                     <a class="contact-highlight" href="https://vk.me/stukserdzavk" target="_blank" rel="noopener"
                         style="margin-top: 8px;">
                         ВКонтакте для связи:
                         <div class="social-sofia">
-                            <strong>Мари (Стук сердца)</strong>
+                            <strong>Мария </strong>
                         </div>
                     </a>
                 </div>
-                <form action="https://formspree.io/f/mgowdgyd" method="POST" class="med-form">
-                    <div>
-                        <label for="name">Имя</label>
-                        <input id="name" name="name" type="text" required placeholder="Ваше имя">
-                    </div>
-                    <div>
-                        <label for="email">Email</label>
-                        <input id="email" name="email" type="email" required placeholder="you@example.com">
-                    </div>
-                    <div>
-                        <label for="message">Ваш запрос</label>
-                        <textarea id="message" name="message" required
-                            placeholder="Напишите, какие медитации откликаются и нужна ли дополнительная поддержка"></textarea>
-                    </div>
-                    <button type="submit" class="btn-primary">Отправить запрос</button>
-                </form>
+
+                <div>
+                    <form action="https://formspree.io/f/mgowdgyd" method="POST">
+                        <div>
+                            <label for="name">Имя</label>
+                            <input id="name" type="text" name="name" placeholder="Ваше имя" required>
+                        </div>
+                        <div>
+                            <label for="email">Email</label>
+                            <input id="email" type="email" name="email" placeholder="you@example.com" required>
+                        </div>
+                        <div>
+                            <label for="message">Ваш запрос</label>
+                            <textarea id="message" name="message" placeholder="Кратко опишите свою ситуацию или вопрос"
+                                required></textarea>
+                        </div>
+                        <div>
+                            <button type="submit" class="btn-primary">Отправить запрос</button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
