Fix button for audioprogramms

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                 <p class="product-text">
                                     Медитации и аудиопрограммы для глубокой и эффективной работы с подсознанием.
                                 </p>
-                                <a href="meditations.html" class="product-link">learn about медитации</a>
+                                <a href="meditations.html" class="product-link">Узнать о аудиопрограммах</a>
                             </article>
                         </div>
                     </div>
