Fix Отзывы link

--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 <a href="#top">Вверх</a>
                 <a href="#about">Обо мне</a>
                 <a href="#services">Формат работы</a>
-                <a href="#services">testimonials</a>
+                <a href="#services">Отзывы</a>
                 <a href="#contact">Контакт</a>
             </div>
         </div>
